--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h1>Hello World</h1>
-<i class="fa fa-facebook"></i>
+<app-topbar></app-topbar> <app-sidebar></app-sidebar>
+<div class="container-fluid">
+  <h1>"Hello World!!"</h1>
+</div>
