creating and styling for sidebar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
 <app-topbar></app-topbar> <app-sidebar></app-sidebar>
-<div class="container-fluid">
-  <h1>"Hello World!!"</h1>
-</div>
+<div class="container-fluid"></div>
