--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,1 +1,20 @@
-<p>sidebar works!</p>
+<nav class="sidebar">
+  <div class="logo">
+    <a href="#">
+      <img src="../../../../assets/img/download.png" alt="logo" />
+    </a>
+  </div>
+  <div class="navigation">
+    <ul class="list-unstyled">
+      <li>
+        <a href="#">Summary</a>
+      </li>
+      <li>
+        <a href="#">By Country</a>
+      </li>
+      <li>
+        <a href="#">LIVE</a>
+      </li>
+    </ul>
+  </div>
+</nav>
