--- a/src/app/shared/components/topbar/topbar.component.html
+++ b/src/app/shared/components/topbar/topbar.component.html
@@ -1,1 +1,5 @@
-<p>topbar works!</p>
+<nav class="navbar navbar-light bg -light">
+  <div class="container-fluid">
+    <button class="btn btn-success ms-auto" type="button">Login</button>
+  </div>
+</nav>
