click able link to page enable

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,19 +1,19 @@
 <nav class="sidebar">
   <div class="logo">
-    <a href="#">
+    <a [routerLink]="'summary'">
       <img src="../../../../assets/img/download.png" alt="logo" />
     </a>
   </div>
   <div class="navigation">
     <ul class="list-unstyled">
-      <li>
-        <a href="#">Summary</a>
+      <li [routerLink]="'summary'">
+        <a>Summary</a>
       </li>
-      <li>
-        <a href="#">By Country</a>
+      <li [routerLink]="'country'">
+        <a>By Country</a>
       </li>
-      <li>
-        <a href="#">LIVE</a>
+      <li [routerLink]="'live'">
+        <a>LIVE</a>
       </li>
     </ul>
   </div>
