--- a/src/app/shared/components/sidebar/sidebar.component.css
+++ b/src/app/shared/components/sidebar/sidebar.component.css
@@ -37,3 +37,9 @@
 .sidebar .navigation ul li:focus a {
   color: #ffffff;
 }
+.sidebar .navigation ul li.active {
+  background-color: #333333;
+}
+.sidebar .navigation ul li.active a {
+  color: #ffffff;
+}
