--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -6,13 +6,13 @@
   </div>
   <div class="navigation">
     <ul class="list-unstyled">
-      <li [routerLink]="'summary'">
+      <li [routerLink]="'summary'" routerLinkActive="active">
         <a>Summary</a>
       </li>
-      <li [routerLink]="'country'">
+      <li [routerLink]="'country'" routerLinkActive="active">
         <a>By Country</a>
       </li>
-      <li [routerLink]="'live'">
+      <li [routerLink]="'live'" routerLinkActive="active">
         <a>LIVE</a>
       </li>
     </ul>
